tests/compile-fail/generic_event_missing_bound.stderr
error[E0277]: the trait bound `T: Clone` is not satisfied
 --> tests/compile-fail/generic_event_missing_bound.rs:7:23
  |
7 |         *Idle + event<RequiresClone<T>> = X,
  |                       ^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `T`
  |
note: required by a bound in `RequiresClone`
 --> tests/compile-fail/generic_event_missing_bound.rs:3:29
  |
3 | pub struct RequiresClone<T: Clone>(T);
  |                             ^^^^^ required by this bound in `RequiresClone`
help: consider restricting type parameter `T` with trait `Clone`
  |
6 |     MissingBound<T: std::clone::Clone> {
  |                   +++++++++++++++++++

error[E0277]: the trait bound `T: Clone` is not satisfied
 --> tests/compile-fail/generic_event_missing_bound.rs:5:1
  |
5 | / sml! {
6 | |     MissingBound<T> {
7 | |         *Idle + event<RequiresClone<T>> = X,
8 | |     }
9 | | }
  | |_^ the trait `Clone` is not implemented for `T`
  |
note: required by a bound in `RequiresClone`
 --> tests/compile-fail/generic_event_missing_bound.rs:3:29
  |
3 | pub struct RequiresClone<T: Clone>(T);
  |                             ^^^^^ required by this bound in `RequiresClone`
  = note: this error originates in the macro `sml` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting type parameter `T` with trait `Clone`
  |
6 |     MissingBound<T: std::clone::Clone> {
  |                   +++++++++++++++++++
